# GNSS-GUI

./: .env  .gitignore  DEBUG_REPORT.md  README.md  ROS2 Installation.md  ROVER_TEST_PROMPT.md  SHOWCASE_INSTRUCTIONS.md  TODO.md  detect_cameras.py  test_gui_offline.py  tmp_test_shelltabs.py
gnss_gui/: .gitignore  README.md  config.py  main.py  requirements.txt
gnss_gui/components/: __init__.py  control_panel.py  log_viewer.py  map_viewer.py  shell_tabs.py  spectral_plot.py  status_bar.py  telemetry_panel.py  video_layout_tabs.py  video_viewer.py
gnss_gui/subsystems/: __init__.py  autonomous_navigation.py  drone.py  gnss_comm.py  robotic_arm_delivery.py  science_mission.py
gnss_gui/subsystems/science_mission/: __init__.py  dashboard_tab.py  (+3 more)
gnss_gui/utilities/: __init__.py  connection_manager.py  rover_stream_client.py  telemetry_client.py  video_streamer.py
gui/: README.md  main.py  requirements.txt
gui/components/: __init__.py  gnss_side_panel.py  shell_tabs.py  status_bar.py  video_layout_tabs.py  video_viewer.py
gui/subsystems/: __init__.py  autonomous_navigation.py  gnss_comm.py  power_electronics.py
gui/utilities/: connection_manager.py  rover_stream_client.py  rover_telemetry_client.py  video_streamer.py
rover_software/src/multi_cam_streamer/: CMakeLists.txt  package.xml
rover_software/src/multi_cam_streamer/scripts/: camera_node.py  mock_rover_node.py
rover_software/src/multi_cam_streamer/srv/: GetCameraStreamStatus.srv  StartCameraStream.srv
tests/: manual_test_shell.py  test_shell_env.py  test_video_flow.py  tmp_test_shelltabs.py
(+3 files in other folders)
